--- a/client/app.json
+++ b/client/app.json
@@ -2,8 +2,8 @@
   "pages": [
     "pages/showCamps/showCamps",
     "pages/index/index",
-    
-    "pages/addCgi/addCgi"
+    "pages/addCgi/addCgi",
+    "pages/topicList/topicList"
   ],
   "window": {
     "backgroundColor": "#F6F6F6",
